--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -1,9 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  category_id: 1
+  city: MyText
+  country: MyText
   city_id: 1
+  category: MyText
+  category_id: 1
 
 two:
-  category_id: 1
+  city: MyText
+  country: MyText
   city_id: 1
+  category: MyText
+  category_id: 1
